# kret-pybind-cpp

./: Makefile  README.md  build.sh  build_and_test.sh  demo.py  pybind.code-workspace  pyproject.toml  requirements.txt  setup.py  test_example.py
notebooks/: 0_PyBindNumba.ipynb
src/: example.cpp
